# fepic

./: CMakeLists.txt  LICENSE  README
examples/sphere/: eMod  phiBC  ptclBC  ptclSp  ptclSrc  sim
src/: CMakeLists.txt  fepic.f90  modFEPIC.f90  modImpact.f90  modMGS.f90  modPICGrid.f90  modParticle.f90  modPush.f90  modSource.f90  modUglyFEM.f90
